Bug 295511 - [regression 4.8.0 -> 4.8.1] search function in sieve-filter editor not working anymore
Summary: [regression 4.8.0 -> 4.8.1] search function in sieve-filter editor not workin...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: 1.99.0
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-08 09:13 UTC by m.wege
Modified: 2012-03-20 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-03-08 09:13:10 UTC
User-Agent:       Mozilla/5.0 (X11) KHTML/4.8.1 (like Gecko) Konqueror/4.8
Build Identifier: 

If I edit a sieve filter, I was able to call a search filter with a short cut, I believe it was CRTL-F. But since I used it to automatically, I could also have been CRTL-S or F3. In KDE 4.8.0 this worked fine, in KDE 4.8.1 it does not work anymore. Nothing happens when I press the shprt cut.

Reproducible: Always

Actual Results:  
see above


see above
Comment 1 Laurent Montel 2012-03-08 09:28:23 UTC
yes it's normal. I change texteditor to QPlainTextEdit to have line number.
And it doesn't support search for the moment.
Ok regression but improvment for debugging :)
Comment 2 m.wege 2012-03-08 09:39:41 UTC
It is a very bad regression if you have a large filter with different filters and want to add something to that filter and need to find it first.
Comment 3 Laurent Montel 2012-03-08 10:19:52 UTC
And if you have a big file or a complexe filter which has an error it's better to have an indicator to go to correct line.
Comment 4 m.wege 2012-03-08 10:35:32 UTC
Yes, but if you have a big and complex filter, the error which is in the file, was made during the last edit. Normally I will only edit a small part of the filter. So I will know a search pattern, to find the place I just edited and will be able to find the error, even though I can not find the exact line number which was named in the error report. I had the problem with identifying the line number of a bug also, bug I was always able to find it by searching the area I last edited. With search gone, the problem is worse.
Comment 5 Laurent Montel 2012-03-20 12:38:05 UTC
Git commit 61be9604b603108e645ec9b29696eb58bb692f9f by Montel Laurent.
Committed on 20/03/2012 at 13:37.
Pushed by mlaurent into branch 'master'.

Fix Bug 295511 - [regression 4.8.0 -> 4.8.1] search function in sieve-filter editor not working anymore

FIXED-IN: 4.9

M  +1    -0    libksieve/ksieveui/CMakeLists.txt
M  +24   -1    libksieve/ksieveui/sieveeditor.cpp
M  +6    -0    libksieve/ksieveui/sieveeditor.h
A  +272  -0    libksieve/ksieveui/sievefindbar.cpp     [License: LGPL (v2+)]
A  +81   -0    libksieve/ksieveui/sievefindbar.h     [License: LGPL (v2+)]

http://commits.kde.org/kdepim/61be9604b603108e645ec9b29696eb58bb692f9f