Fix Bug 295511 - [regression 4.8.0 -> 4.8.1] search function in sieve-filter editor not working anymore

FIXED-IN: 4.9
BUG: 295511